# BadBoids

./: Cargo.toml  README.md  build_wasm.sh  flake.nix
.github/: CODEOWNERS
.github/workflows/: testing.yml
assets/sprites/: credits.md
src/: input.rs  main.rs
web/: index.html
